--- a/styles.css
+++ b/styles.css
@@ -75,9 +75,9 @@ body, html {
     border-radius:50%;
     width: 100px;
   }
-  .encabezado-home h4,
+  .encabezado-home h4,                     
   .encabezado-home h6 {
-    margin: 0; 
+    margin: 0;                                                 
   }
   .recibos h5,
   .recibos p{
@@ -93,9 +93,11 @@ body, html {
     margin-bottom: 5px;
 padding: 5px;
     background-color: rgba(98, 178, 232, 0.3);
-    border-radius: 4px;
+    border-radius: 8px;
     display: flex;
     justify-content: space-around;
+    width: 90%;
+    margin: auto;
   }
     .contenedor{
         margin: 40px auto;
@@ -123,10 +125,20 @@ gap: 60px;
 
     /*-------------Estilo del encabezado HTML 2 FIN -----------*/
 
-@media only screen and (min-width:320px) and (max-width:480px) {
+@media only screen and (min-width:300px) and (max-width:480px) {
     .container {
         max-width: 80%;
     }
+    .menu{
+
+        visibility: collapse;
+    }
+    .footer{
+
+        visibility: visible;
+    }
+
+
 }
 
 @media only screen and (min-width:480px) and (max-width:650px) {
@@ -134,8 +146,14 @@ gap: 60px;
         max-width: 60%;
     }
 
-    
+    .menu{
 
+        visibility: collapse;
+    }
+    .footer{
+
+        visibility: visible;
+    }
    
 }
 
@@ -146,12 +164,20 @@ gap: 60px;
     .contenedor{
         width: 70%;
     }
-  
+    .menu{
+
+        visibility: collapse;
+    }
+    .footer{
+
+        visibility: visible;
+    }
 }
 
 @media only screen and (min-width:900px) and (max-width:2200px) {
     .container {
         max-width: 30%;
+       
     }
     .contenedor{
         flex-direction: row;
@@ -166,27 +192,58 @@ gap: 60px;
         width: 25%;
 
     }
+    .navbar{
 
+max-width: 90%;
+margin: auto;
+    }
+
+    .menu{
+
+    visibility: visible;
+    }
+    .footer{
+
+        visibility: collapse;
+    }
 }
 
 
 
 /*------------------------------------------Footer inicio--------------------------------------*/
+.menu{
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+}
+
 .footer{
 
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
+    width: 50%;
 }
-.footer-iconos{
+
+.menu-iconos{
 display: flex;
 flex-direction: column;
 align-items: center;
 gap:4px;
 font-size: small;
+cursor: pointer;
 }
-
-@media only screen and (min-width:320px) and (max-width:480px) {
+.footer-iconos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:4px;
+    font-size: small;
+    cursor: pointer;
+    }
+@media only screen and (min-width:300px) and (max-width:480px) {
   
 }
 
