--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ gap: 60px;
 @media only screen and (min-width:300px) and (max-width:480px) {
     .container {
         max-width: 80%;
+        margin: auto;
     }
     .menu{
 
@@ -249,7 +250,7 @@ cursor: pointer;
         margin: auto;
            }
 
-           
+
   
 }
 
