--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,17 @@ gap: 60px;
     .container {
         max-width: 80%;
         margin: auto;
+
+        
     }
+    .container {
+        max-width: 80%;
+        width: 80%;
+
+    }
+
+
+    
     .menu{
 
         visibility: collapse;
@@ -217,7 +227,7 @@ margin: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 50%;
+    width: 45%;
 }
 
 .footer{
@@ -246,21 +256,20 @@ cursor: pointer;
     }
 @media only screen and (min-width:320px) and (max-width:480px) {
     .footer{
-        max-width: 80%;
+        max-width: 100%;
         margin: auto;
            }
-
-
-  
 }
+
 
 @media only screen and (min-width:480px) and (max-width:650px) {
    .footer{
-max-width: 80%;
+max-width: 100%;
 margin: auto;
    }
- 
 }
+
+
 
 @media only screen and (min-width:650px) and (max-width:900px) {
     .footer{
@@ -269,6 +278,8 @@ margin: auto;
         margin: auto;
            }
 }
+
+
 
 @media only screen and (min-width:900px) and (max-width:2200px) {
     .footer{
