--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,7 @@ cursor: pointer;
 @media only screen and (min-width:320px) and (max-width:480px) {
     .footer{
         max-width: 100%;
+        width: 95%;
         margin: auto;
            }
 }
