--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,8 @@ cursor: pointer;
 
 @media only screen and (min-width:480px) and (max-width:650px) {
    .footer{
-max-width: 100%;
+    max-width: 100%;
+    width: 95%;
 margin: auto;
    }
 }
