--- a/styles.css
+++ b/styles.css
@@ -97,13 +97,14 @@ padding: 5px;
     display: flex;
     justify-content: space-around;
     width: 90%;
-    margin: auto;
+    margin: 10px auto;
   }
     .contenedor{
         margin: 40px auto;
         width: 90%;
         display: flex;
         flex-direction: column;
+        gap:10px;
     }
 
 
