--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,10 @@ gap: 60px;
 
         visibility: visible;
     }
+.imgRecibo{
 
+    width: 400px;
+}
 
 }
 
@@ -166,7 +169,10 @@ gap: 60px;
 
         visibility: visible;
     }
-   
+    .imgRecibo{
+
+        width: 460px;
+    }
 }
 
 @media only screen and (min-width:650px) and (max-width:900px) {
@@ -184,6 +190,10 @@ gap: 60px;
 
         visibility: visible;
     }
+    .imgRecibo{
+
+        width: 460px;
+    }
 }
 
 @media only screen and (min-width:900px) and (max-width:2200px) {
@@ -192,6 +202,7 @@ gap: 60px;
        
     }
     .contenedor{
+        margin-top: 80px;
         flex-direction: row;
         justify-content: space-evenly;
     }
@@ -218,9 +229,12 @@ margin: auto;
 
         visibility: collapse;
     }
+
+    .imgRecibo {
+        width: 460px;
 }
 
-
+}
 
 /*------------------------------------------Footer inicio--------------------------------------*/
 .menu{
@@ -297,3 +311,87 @@ margin: auto;
 
 /*----------------------------------------- Footer fin-----------------------------------------*/
 
+/*----------------------------------------html3 inicio------------------------------------------------*/
+.misRecibos-html3{
+    text-align: center;
+}
+.misRecibos-botones{
+    display: flex;
+    justify-content: center;
+    gap: 2px;
+    margin-top: 3px;
+}
+.butoon-misRecibos{
+    width: 45%;
+    border: none;
+    font-size: small;
+    padding: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: rgba(98, 178, 232, 0.9);
+    border: solid 1px  rgba(98, 178, 232, 0.3);
+
+}
+
+.misRecibosVer{
+
+    width: 92%;
+    margin:30px auto;
+    padding: 4px;
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+}
+.misRecibosVer1 {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    align-items: flex-start;
+    gap: 0; /* Ajusta esta propiedad según necesites espacio entre elementos */
+    border-left: 7px groove rgba(98, 178, 232, 0.9);
+    border-top-left-radius: 10px ;
+    border-bottom-left-radius: 10px ;
+   
+ }
+ 
+ .misRecibosVer1 > * {
+    margin: 0; /* Elimina los márgenes de los elementos hijos */
+    padding: 0; /* Elimina los rellenos de los elementos hijos */
+ }
+
+.misRecibosVer1 p{
+    color: rgb(0, 0, 0,0.5);
+    margin-left: 10px;
+    font-size: 20px;
+}
+.misRecibosVer1:hover{
+
+    background-color: rgba(98, 178, 232, 0.3);
+    cursor: pointer;
+}
+.pendienteBloqueado{
+border: solid 1px  rgba(98, 178, 232, 0.4);
+padding: 4px;
+    margin-left: 21px;
+    color:rgba(98, 178, 232, 0.8);
+    border-radius: 3px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+
+.imgRecibo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Esto hace que la imagen cubra el contenedor */
+}
+
+/*----------------------------------------html3 fin------------------------------------------------*/
+
+
+/*-----------------------------------boton deplegable inicio -----------------------------------------*/
+
+/*-------------------------------------boton desplegable fin-------------------------------------------*/
